Added code-coverage profile